--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/jdeymisson/api-bombeiros-voluntarios#readme",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "knex": "^2.4.2",
+    "pg": "^8.11.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
