adicionando a uri do banco

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3333
 AUTH_SECRET=bombeiros777
+URI_DB=postgres://bombeiros_db:Gzcbkib9bvmagjyYzxXsw9wweygFBqDC@dpg-clglo158td7s73bj9hv0-a/bombeiros_db_k58e
